// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplyTemplate should render 1`] = `
<div
  autocomplete="off"
  class="css-13zxgsh"
  data-testid="add-service-form"
>
  <div
    class="css-gc6fji"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-1arqoo8"
      for="service-name"
    />
    <div
      class="css-1xqce5"
    >
      <div
        class="css-dqae60-input denali-input animated css-16lit39"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="0"
          name=""
          placeholder="Enter "
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplyTemplate should render with keywords 1`] = `
<div
  autocomplete="off"
  class="css-13zxgsh"
  data-testid="add-service-form"
>
  <div
    class="css-gc6fji"
  >
    <label
      class="css-fc0mv0-input-label denali-input-label css-1arqoo8"
      for="service-name"
    >
      service
    </label>
    <div
      class="css-1xqce5"
    >
      <div
        class="css-dqae60-input denali-input animated css-16lit39"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="service0"
          name="service"
          placeholder="Enter service"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
</div>
`;
